// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Select] render test should render without crashing 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={true}
    pointerEvents="box-none"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "height": "100%",
            "width": "100%",
          },
        ]
      }
    >
      <
        activeOpacity={0.95}
        bordered={true}
        disabled={false}
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#f7f7f7",
              "borderColor": "transparent",
              "borderRadius": 5,
              "flexDirection": "row",
              "height": "100%",
              "opacity": 0.9,
              "paddingBottom": 14,
              "paddingLeft": 12,
              "paddingRight": 12,
              "paddingTop": 14,
              "shadowColor": "rgba(212, 210, 212, 0.8)",
              "shadowOffset": Object {
                "height": 2,
                "width": 0,
              },
              "shadowOpacity": 1,
              "shadowRadius": 4,
              "width": "100%",
            },
            Object {
              "borderBottomLeftRadius": 5,
              "borderBottomRightRadius": 5,
            },
            undefined,
          ]
        }
        testID="SELECT_WRAPPER"
      >
        <Text
          disabled={false}
          style={
            Array [
              Object {
                "alignSelf": "center",
                "color": "#2b2b2b",
                "fontSize": 12,
              },
              undefined,
            ]
          }
        >
          Testing-placeholder
        </Text>
        <View
          style={
            Object {
              "position": "absolute",
              "right": 10,
              "transform": Array [
                Object {
                  "rotate": "0deg",
                },
              ],
            }
          }
          testID="SELECT_SUFFIX"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "height": 20,
                  "justifyContent": "center",
                  "width": 20,
                },
              ]
            }
          >
            <Image
              source={
                Object {
                  "testUri": "../../../main/__assets__/arrow_down.png",
                }
              }
              style={
                Object {
                  "height": 20,
                  "tintColor": "#2b2b2b",
                  "width": 20,
                }
              }
            />
          </View>
        </View>
      </>
      <View
        bordered={true}
        style={
          Array [
            Object {
              "backgroundColor": "#ffffff",
              "borderBottomLeftRadius": 5,
              "borderBottomRightRadius": 5,
              "borderColor": "transparent",
              "borderWidth": 0,
              "shadowColor": "rgba(212, 210, 212, 0.8)",
              "shadowOffset": Object {
                "height": 2,
                "width": 0,
              },
              "shadowOpacity": 1,
              "shadowRadius": 4,
            },
            undefined,
          ]
        }
        visible={false}
      >
        <ScrollView
          keyboardDismissMode="on-drag"
          scrollEventThrottle={0.0001}
          style={
            Object {
              "height": 0,
            }
          }
          testID="SELECT_CHILD_SCROLLVIEW"
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`[SelectItem] render test should render without crashing 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={true}
    pointerEvents="box-none"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "height": "100%",
            "width": "100%",
          },
        ]
      }
    >
      <
        activeOpacity={0.95}
        bordered={true}
        disabled={false}
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#f7f7f7",
              "borderColor": "transparent",
              "borderRadius": 5,
              "flexDirection": "row",
              "height": "100%",
              "opacity": 0.9,
              "paddingBottom": 14,
              "paddingLeft": 12,
              "paddingRight": 12,
              "paddingTop": 14,
              "shadowColor": "rgba(212, 210, 212, 0.8)",
              "shadowOffset": Object {
                "height": 2,
                "width": 0,
              },
              "shadowOpacity": 1,
              "shadowRadius": 4,
              "width": "100%",
            },
            Object {
              "borderBottomLeftRadius": 5,
              "borderBottomRightRadius": 5,
            },
            undefined,
          ]
        }
        testID="SELECT_WRAPPER"
      >
        <Text
          disabled={false}
          style={
            Array [
              Object {
                "alignSelf": "center",
                "color": "#2b2b2b",
                "fontSize": 12,
              },
              undefined,
            ]
          }
        >
          Item-1
        </Text>
        <View
          style={
            Object {
              "position": "absolute",
              "right": 10,
              "transform": Array [
                Object {
                  "rotate": "0deg",
                },
              ],
            }
          }
          testID="SELECT_SUFFIX"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "height": 20,
                  "justifyContent": "center",
                  "width": 20,
                },
              ]
            }
          >
            <Image
              source={
                Object {
                  "testUri": "../../../main/__assets__/arrow_down.png",
                }
              }
              style={
                Object {
                  "height": 20,
                  "tintColor": "#2b2b2b",
                  "width": 20,
                }
              }
            />
          </View>
        </View>
      </>
      <View
        bordered={true}
        style={
          Array [
            Object {
              "backgroundColor": "#ffffff",
              "borderBottomLeftRadius": 5,
              "borderBottomRightRadius": 5,
              "borderColor": "transparent",
              "borderWidth": 0,
              "shadowColor": "rgba(212, 210, 212, 0.8)",
              "shadowOffset": Object {
                "height": 2,
                "width": 0,
              },
              "shadowOpacity": 1,
              "shadowRadius": 4,
            },
            undefined,
          ]
        }
        visible={false}
      >
        <ScrollView
          keyboardDismissMode="on-drag"
          scrollEventThrottle={0.0001}
          style={
            Object {
              "height": 0,
            }
          }
          testID="SELECT_CHILD_SCROLLVIEW"
        />
      </View>
    </View>
  </View>
</View>
`;
